  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------


2004/12/28: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- undid a change by Christian from 2004-12-20: keep buffer in function
  GWEN_MsgEngine__TransformValue() static, since it's content is returned.
  Removing the "static" attribute will return a pointer to data which has been
  already freed.


2004/12/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_STRINGLIST2:
  - fixed some bugs
- GWEN_XSD:
  - added function to adapt an XML file to the namespaces in an XSD profile
    (to simplify comparison to XML schema)


2004-12-22   Christian Stimming <stimming@tuhh.de>

	* tools/typemaker/code_c.c: Commented out generation of List2_dup
	function because that one is now generated by the list macro. This
	is necessary so that aqbanking actually compiles with current gwen
	CVS, or did I misunderstand something?


2004-12-20   Christian Stimming <stimming@tuhh.de>

	* src/parser/msgengine.c: Make local character buffer non-static
	so that there will not be any thread-related problems.

	* src/parser/text.c: Make static conversion structure const so
	that it is absolutely clear that this has read-only access. To
	avoid potential thread-related problems.


2004/12/16: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_XML: Fixed a problem: Now data (between XML elements) can contain any
  character except "<". Quotation marks and apostrophs are now only parsed
  within element definitions.


2004/12/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added new class GWEN_REFPTR (a type of smart pointer with reference counter)
- GWEN_LIST: 